--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PeterKassenaar/node-express-template"
+    "url": "https://github.com/PeterKassenaar/chuckfacts"
   },
   "keywords": [
     "node",
     "express",
-    "template",
-    "basic"
+    "chuck norris",
+    "api"
   ],
   "author": "Peter Kassenaar",
   "license": "MIT",
