--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PeterKassenaar/chuckfacts"
+    "url": "https://github.com/PeterKassenaar/node-express-template"
   },
   "keywords": [
     "node",
     "express",
-    "chuck norris",
-    "api"
+    "template",
+    "basic"
   ],
   "author": "Peter Kassenaar",
   "license": "MIT",
